--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <p>This is a simple HTML file to demonstrate GitHub workflow.</p>
     <p>Visit my https://github.com.</p>
 </body>
+
+<body>
+    <h2>My name is Jatin Bhoir </h2>
+</body>
 </html>
 
