--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>My name is Jatin Bhoir. This is V4 </h2>
 </body>
 <body>
-    <h3>Added the Desgning .</h3>
+    <h3>Added the Desgning version V7.1.</h3>
 </body>
 </html>
 
